RESOLVED FIXED45731
[chromium] Return NULL from getSharedGraphicsContext3D if we couldn't initialize
https://bugs.webkit.org/show_bug.cgi?id=45731
Summary [chromium] Return NULL from getSharedGraphicsContext3D if we couldn't initialize
James Robinson
Reported 2010-09-13 20:48:35 PDT
[chromium] Return NULL from getSharedGraphicsContext3D if we couldn't initialize
Attachments
Patch (1.55 KB, patch)
2010-09-13 20:49 PDT, James Robinson
dglazkov: review+
James Robinson
Comment 1 2010-09-13 20:49:40 PDT
Dimitri Glazkov (Google)
Comment 2 2010-09-13 21:03:58 PDT
Comment on attachment 67515 [details] Patch ok.
James Robinson
Comment 3 2010-09-13 21:09:01 PDT
WebKit Review Bot
Comment 4 2010-09-13 22:01:18 PDT
http://trac.webkit.org/changeset/67439 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.